TP7-Types/tests/bad/t01.ml
(* Incohérence INT vs BOOL *)
print_int (1 + true) ;;
